refatorando client e dip

--- a/dip-project/src/main/resources/application.properties
+++ b/dip-project/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/bd_dip
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=12345678
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test_db
 spring.datasource.driverClassName=org.h2.Driver
