authenticação com JWT

--- a/dip-project/src/main/resources/application.properties
+++ b/dip-project/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
